2009-04-12  kokosabu  <kokosabu@gmail.com>

        * Added : manage active ports.

2009-04-12  higepon  <higepon@users.sourceforge.jp>

        * Replaced (srfi :64) from ikarus-srfi.

        * lib/srfi/%3a1/lists.sls : Updated from ikarus-srfi.

        * test/lists.scm : Added from ikarus-srfi.

2009-04-11  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp: Adjust open flags.

2009-04-10  higepon  <higepon@users.sourceforge.jp>

        * Added (srfi :99) and tests.

        * tools/psyntax-r6rs/rev10_to_10/psyntax-buildscript-mosh.ss (identifier->library-map): Added assertion-error.

        * VM.cpp (mayBeStackPointer): Fixed the bug of Stack trace.

        * lib/srfi/%3a19/srfi-19.scm (date->julian-day): Merged bug fix.

2009-04-09  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryOutputPort.h : Changed fd_ => File Class.

        * FileBinaryInputOutputPort.cpp : Changed fd_ => File Class.

        * FileBinaryInputPort.cpp : Changed fd_ => File Class.

        * LineBufferedFileBinaryInputOutputPort.h: Changed fd_ => File Class.

        * BufferedFileBinaryInputPort.cpp : Changed fd_ => File Class.

        * FileBinaryInputOutputPort.cpp: Changed OutputPort to use File Class.

        * OSCompat.cpp (lseekFd): Added.

        * main.cpp (main): Use getCommandLine and getopt_longU.

        * configure.ac: autoreconf -ifv for mingw.

2009-04-08  higepon  <higepon@users.sourceforge.jp>

        * getoptU.cpp : Ported getopt_long for ucs4.

        * getoptUTest.cpp: Added tests for getopt_longU.

        * OSCompat.cpp (getMoshExecutablePath): Moved to OSCompat.cpp

2009-04-07  higepon  <higepon@users.sourceforge.jp>

        * Changed open() => openFd();

        * Added openFd.

        * Added utf32toUtf8 and utf8ToUtf32.

        * OSCompat.cpp (getEnv, getEnvAlist): Added for Linux and OS X.

        * OSCompatTest.cpp : Added.

        * OScompat.h : Added.

2009-04-06  higepon  <higepon@users.sourceforge.jp>
