@@ -72,7 +72,7 @@ protected:
     VM* theVM_;
     virtual void SetUp() {
         mosh_init();
-        Transcoder* transcoder = Transcoder::nativeTranscoder();
+        Transcoder* transcoder = nativeTranscoder();
         Object inPort    = Object::makeTextualInputPort(new StandardInputPort(), transcoder);
         Object outPort   = Object::makeTextualOutputPort(new StandardOutputPort(), transcoder);
         Object errorPort = Object::makeTextualOutputPort(new BlockBufferedFileBinaryOutputPort(UC("/dev/null")), transcoder);
